assets/stylesheets/common/retort.scss
.my-retort {
  background-color: var(--tertiary-very-low);
  border: 1px solid var(--tertiary-medium);
  transition: 0.2s;
  &:hover {
    background-color: var(--tertiary-low);
  }
}

.not-my-retort {
  background-color: transparent;
  border: 1px solid var(--primary-low);
  transition: 0.2s;
  &:hover {
    background-color: var(--primary-very-low);
  }
}

.nobody-retort {
  display: none !important;
}

.post-retort {
  float: none;
  border-radius: 8px;
  margin: 2px 2px;
  padding: 5px;
  z-index: auto;
  position: relative;
  display: inline-flex;
  align-items: center;

  img {
    margin-right: 4px;
  }

  &:hover .post-retort__tooltip {
    display: inline;
  }

  &__tooltip {
    align-self: flex-start;
    display: none;
    position: absolute;
    margin-top: 30px;
    font-size: 12px;
    text-align: center;
    min-width: 125px;
    max-width: 150px;
    background: var(--primary);
    color: var(--secondary);
    padding: 5px;
    border-radius: 5px;
    word-wrap: normal;
    left: 50%;
    transform: translate(-50%, 0);
    z-index: 1;
    pointer-events: none;
    word-break: break-word;
    
  }

  &__count {
    font-size: 14px;
    padding: 1px;
    position: relative;
    left: 1px;
    font-weight: bold;
    color: var(--primary-medium);
  }

  .remove-retort {
    color: var(--primary-medium);
    padding: 0px;
    margin-left: 4px;
    display: none;
    transition: 0.2s;

    &:hover {
      background-color: var(--primary-low);
    }
  }

  &:hover .remove-retort {
    align-self: center;
    display: inline-block;
  }
}

